# compiler

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
examples/: simple.rs
src/: ast.rs  error.rs  gen.rs  lib.rs  parser.rs  writer.pest  writer4.pest
src/ast/: common.rs  hir.rs  lir.rs  mod.rs
src/backend/: mod.rs
src/backend/html/: mod.rs
src/backend/pdf/: mod.rs
src/parser/: hir.rs  lir.rs  mod.rs
tests/: all.rs  html.rs  pdf.rs
