[package]
name = "writer4-compiler"
version = "0.1.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2018"

[features]
default = ["html-backend"]
html-backend = ["html-escape"]
pdf-backend = []

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
thiserror = "1.0.14"
html-escape = { version = "0.2.6", optional = true }
